resources/late-install/basic-firewall
# Generated by iptables-save
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:GENERAL-ALLOW - [0:0]
:REJECT-ALL - [0:0]
-A INPUT -m comment --comment "No rules of any kind below this rule" -j GENERAL-ALLOW
-A INPUT -j REJECT-ALL
-A GENERAL-ALLOW -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m comment --comment "Established Connections" -j ACCEPT
-A GENERAL-ALLOW -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m comment --comment "SSH Access" -j ACCEPT
-A GENERAL-ALLOW -s 8.8.4.4/32 -p udp -m udp --sport 53 -m comment --comment "Google DNS UDP" -j ACCEPT
-A GENERAL-ALLOW -s 8.8.4.4/32 -p tcp -m tcp --sport 53 -m comment --comment "Google DNS TCP" -j ACCEPT
-A GENERAL-ALLOW -s 8.8.8.8/32 -p udp -m udp --sport 53 -m comment --comment "Google DNS UDP" -j ACCEPT
-A GENERAL-ALLOW -s 8.8.8.8/32 -p tcp -m tcp --sport 53 -m comment --comment "Google DNS TCP" -j ACCEPT
-A GENERAL-ALLOW -s POOL_NTP_0/32 -p udp -m udp --sport 123 -m comment --comment "NTP Pool Servers" -j ACCEPT
-A GENERAL-ALLOW -s POOL_NTP_1/32 -p udp -m udp --sport 123 -m comment --comment "NTP Pool Servers" -j ACCEPT
-A GENERAL-ALLOW -s POOL_NTP_2/32 -p udp -m udp --sport 123 -m comment --comment "NTP Pool Servers" -j ACCEPT
-A GENERAL-ALLOW -s POOL_NTP_3/32 -p udp -m udp --sport 123 -m comment --comment "NTP Pool Servers" -j ACCEPT
-A GENERAL-ALLOW -p icmp -j ACCEPT
-A GENERAL-ALLOW -i lo -j ACCEPT
-A REJECT-ALL -p tcp -j REJECT --reject-with tcp-reset
-A REJECT-ALL -p udp -j REJECT --reject-with icmp-port-unreachable
-A REJECT-ALL -p icmp -j DROP
COMMIT
# Completed
